adjusted gitignore for intellij

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,7 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+/.idea/.idea.GreatMeadow.dir/.idea/.gitignore
+/.idea/.idea.GreatMeadow.dir/.idea/vcs.xml
+/.idea/.idea.GreatMeadow.dir/.idea/indexLayout.xml
+/.idea/.idea.GreatMeadow.dir/.idea/encodings.xml
